--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "default-passive-events": "^2.0.0",
     "vant": "^3.4.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
