--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "default-passive-events": "^2.0.0",
+    "js-md5": "^0.7.3",
     "vant": "^3.4.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/js-md5": "^0.4.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
